--- a/ArtClassification_7_conv1,2,3_freeze_cutmix_LAMDALR_Weight.ipynb
+++ b/ArtClassification_7_conv1,2,3_freeze_cutmix_LAMDALR_Weight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "708d6685",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "4    1625            1  train  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,13 +134,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_classes = pd.read_csv('./wikiArt/classes.csv')\n",
+    "df_classes = pd.read_csv('./archive/classes.csv')\n",
     "df_classes.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "99cfbde6",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8bb60f13",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "471c43b3",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f56c7b6d",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "be19de9d",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "91354dc3",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "4  87e4b097c4e80fd5   1935    1382            1  train            24  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d8b71a99",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "4    1382            1   test             9  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "57259e92",
    "metadata": {},
    "outputs": [],
@@ -811,13 +811,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f51a4f82",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_data(df):\n",
-    "    ds_path = \"./wikiArt/\"\n",
+    "    ds_path = \"./archive/\"\n",
     "    filenames = [ f\"{ds_path}/{filename}\" for filename in  df[\"filename\"].values]\n",
     "    labels = [artist for artist in df[\"artist_class\"]]\n",
     "    #ds = tf.data.Dataset.from_tensor_slices((filenames, labels))\n",
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bdb37ad1",
    "metadata": {},
    "outputs": [],
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f0e3995d",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
        "Name: artist_class, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "179356e6",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "04cb0064",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
        " 1012]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "016702aa",
    "metadata": {},
    "outputs": [
@@ -987,7 +987,7 @@
        "Name: artist, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "15e86729",
    "metadata": {},
    "outputs": [
@@ -2008,7 +2008,7 @@
        " ...]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "858812b6",
    "metadata": {},
    "outputs": [],
@@ -2060,7 +2060,7 @@
     }
    ],
    "source": [
-    "import torch \n",
+    "import torch\n",
     "w = make_weights(train_labels,25)\n",
     "w= torch.FloatTensor(w).to(\"mps\")\n",
     "print(w)"
@@ -3173,7 +3173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "11b6de9f",
    "metadata": {},
    "outputs": [],
@@ -3188,7 +3188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "54571f1b",
    "metadata": {},
    "outputs": [],
@@ -3196,8 +3196,7 @@
     "# Data Imbalance 문제 해결 위해 CrossEntropyLoss에 Weight 적용\n",
     "# criterion = nn.CrossEntropyLoss(weight=w)\n",
     "# 모든 매개변수들이 최적화되었는지 관찰\n",
-    "optimizer_ft = optim.SGD(resnet.parameters(), lr=0.0001, momentum=0.9)\n",
-    "\n",
+    "optimizer_ft = optim.SGD(resnet.parameters(), lr=0.0005, momentum=0.9)\n",
     "\n",
     "lambda1 = lambda epoch: 0.65 ** epoch\n",
     "scheduler = torch.optim.lr_scheduler.LambdaLR(optimizer_ft, lr_lambda=lambda1)"
@@ -3215,7 +3214,7 @@
     "    check_point = {\n",
     "        'net2' : model.state_dict()\n",
     "    }\n",
-    "    torch.save(check_point, saved_dir+'/best_model7_weight.pt')"
+    "    torch.save(check_point, saved_dir+'/best_model9_weight.pt')"
    ]
   },
   {
@@ -3330,7 +3329,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d024b056cea54e4095a8164156aab863",
+       "model_id": "c74fda7a30eb4465bee2845712d8402f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3345,37 +3344,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lr:  6.500000000000001e-05\n",
+      "lr:  0.00032500000000000004\n",
       "Succeed save the model\n",
-      "0 1.8211322356410804 0.5086753731343283 66.76136779785156\n"
+      "0 1.7506190827074606 0.5272388059701493 69.50758361816406\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6c2de0578814f198b77f34002aaa9f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/670 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succeed save the model\n",
-      "1 1.6838485386963205 0.5462686567164179 68.50379180908203\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "486e611420004a89bdba08d3d9d767b2",
+       "model_id": "c7cbf6d3f0b4467d9faf3817a471a387",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3391,13 +3368,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "2 1.621478757115223 0.5645522388059702 69.03409576416016\n"
+      "1 1.5703155332883911 0.58125 72.80303192138672\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44788f212bfc4998afd3aa6946fd059c",
+       "model_id": "77633d293862455ea10d8c64148fcaa7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3413,13 +3390,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "3 1.6754842441089128 0.5542910447761195 68.92045593261719\n"
+      "2 1.4747762373120974 0.6087686567164179 74.33712768554688\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25851bd2a1224c6288c86bde2232d369",
+       "model_id": "58a8d43509774bb7ba313cef093a4fba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3435,13 +3412,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "4 1.6536015220019848 0.5537313432835821 69.77273559570312\n"
+      "3 1.4650792080368875 0.6130597014925373 74.67803192138672\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "563a5615226248ac90cfe146f1ef5be8",
+       "model_id": "ef0c64a9ff3144568dcd58559dffe256",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3457,13 +3434,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "5 1.6220539669730383 0.5729477611940299 70.73863983154297\n"
+      "4 1.448277162685879 0.621455223880597 75.09469604492188\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6bf2340057d4ae8b1a470b3e96bb877",
+       "model_id": "de5fa6678c314ee7af05224ba05c6a05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3479,13 +3456,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "6 1.59134475470302 0.5772388059701492 69.65909576416016\n"
+      "5 1.4255782714160925 0.6307835820895522 76.07954406738281\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dabf3269f0e46f4be68fdec7a9abfb9",
+       "model_id": "3336041cc6984c46b0eb1995bf08562b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3501,13 +3478,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "7 1.5983372054470673 0.5747201492537314 70.90909576416016\n"
+      "6 1.3938143729094432 0.6224813432835821 76.70455169677734\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4d29bf61854403b8ecb53d39dd63141",
+       "model_id": "c219c11ee8e7448fb6946c7c79a0e740",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3523,13 +3500,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "8 1.5756624588250046 0.5715485074626866 70.89015197753906\n"
+      "7 1.3604206408976796 0.6441231343283582 76.59091186523438\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92b49450327e4d55825b1c0dfea38302",
+       "model_id": "2268c133feaa43ee996e892232de1056",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3545,36 +3522,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "9 1.6372728072474356 0.5571828358208956 70.81439208984375\n"
+      "8 1.3575541933912154 0.64375 75.8522720336914\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d87cb762bc3443ef896e8da492c7c2b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/670 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lr:  8.750783174008792e-07\n",
-      "Succeed save the model\n",
-      "10 1.6102179621188986 0.5780783582089553 70.79545593261719\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "924d9dc50e1b444c90b9264367c23e8d",
+       "model_id": "673c0eeb532c48ff9aa7e5d537f5b163",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3590,13 +3544,13 @@
      "output_type": "stream",
      "text": [
       "Succeed save the model\n",
-      "11 1.576547323231918 0.5817164179104478 69.52651977539062\n"
+      "9 1.4143555260559904 0.6320895522388059 75.77651977539062\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1427fc6275c04028a6d6c2bef5129b1a",
+       "model_id": "0204a1cfd50d4ad381d0958261e104fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3611,124 +3565,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "lr:  4.375391587004396e-06\n",
       "Succeed save the model\n",
-      "12 1.6337259185064712 0.5640858208955224 70.8522720336914\n"
+      "10 1.3709726089942973 0.6454291044776119 76.21212768554688\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cf4cc0be85644cfac210c4f627c57b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/670 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succeed save the model\n",
-      "13 1.5960085476193193 0.5688432835820896 70.09469604492188\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94e060b4618e4d2494601db07654d74a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/670 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succeed save the model\n",
-      "14 1.5967647999480523 0.5783582089552238 70.28409576416016\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b53a222fb4a84f0fabfef0dbbcf292e3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/670 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succeed save the model\n",
-      "15 1.6303842440136167 0.5652985074626866 70.32196807861328\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "251843994f184f3f8aaba7ec1c31fb1b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/670 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succeed save the model\n",
-      "16 1.6309463704737135 0.5665111940298507 70.2462158203125\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92069a4c92c1491490162e9e159a11d2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/670 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succeed save the model\n",
-      "17 1.5986967186133068 0.5716417910447761 69.4697036743164\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "341bfbbf71714c96adb8629b148a8832",
+       "model_id": "cee14c0d2a914147bb2be2f2846dfad1",
        "version_major": 2,
        "version_minor": 0
       },
